cleaned up test suite
20051016035701-6d90f-1be0b054fcf2bb4dd9685402cff5118b6686e8b4.gz

--- a/tests/depOnLib/test.cabal
+++ b/tests/depOnLib/test.cabal
@@ -9,5 +9,5 @@ exposed-modules: A
 
 Executable: mainForA
 Other-Modules: Main, A
-hs-source-dir: mains
+hs-source-dirs: mains, libs
 Main-is: Main.hs
