cvs pull from krasimir & simon
  from Neil Mitchell (fixed by Krasimir):
  
  On Windows, the path can be path;"c:\ghc\ghc-6.4\bin";restofpath, and
  thats still a valid path with GHC in it. Cabal doesn't find ghc with
  the quotes in, removing them does find it though.

SimonMar:
  Add Distribution.Program to exposed-modules


20051021163139-6d90f-b48a761a968b1db26c25c9ecf10d83110ff6fc9b.gz

--- a/package.conf.in
+++ b/package.conf.in
@@ -18,10 +18,11 @@ exposed-modules:
 	Distribution.PackageDescription,
 	Distribution.ParseUtils,
 	Distribution.PreProcess,
+	Distribution.PreProcess.Unlit,
+	Distribution.Program,
 	Distribution.Setup,
 	Distribution.Simple,
 	Distribution.Version,
-	Distribution.PreProcess.Unlit,
 	Distribution.Simple.Build,
 	Distribution.Simple.Configure,
 	Distribution.Simple.GHCPackageConfig,
