importing haskell98 where appropriate
20051025051212-6d90f-5d5750b51f0461ae67eef4191628c40972737f5e.gz

--- a/tests/HUnit-1.0/HUnit.cabal
+++ b/tests/HUnit-1.0/HUnit.cabal
@@ -4,7 +4,7 @@ copyright: filler for test suite
 maintainer: filler for test suite
 synopsis: filler for test suite
 License: AllRightsReserved
-Build-Depends: haskell-src
+Build-Depends: haskell-src, haskell98
 Other-Modules: HUnitText, HUnitLang, HUnitTestBase, Terminal, HUnitBase
 Exposed-Modules: HUnit
 HS-Source-Dir: src
