cabal-install uses defaultMain if it can't find Setup.lhs
20060130050710-6d90f-74a3930b4427cd54819d8f31cfb9395d1d4926fd.gz

--- a/cabal-install/cabal-install.cabal
+++ b/cabal-install/cabal-install.cabal
@@ -1,7 +1,7 @@
 Name: cabal-install
 Version: 1.1.4
 Copyright: 2005, Isaac Jones
-Build-depends: Cabal, base
+Build-depends: Cabal >= 1.1.4, base
 License: BSD3
 License-File: ../LICENSE
 Author: Isaac Jones <ijones@syntaxpolice.org>
