added some fields to test suite for duncan's mods
20060204223256-6d90f-15cc667ceb2b0bd585b584acdbfc6cc0dd1f5c6a.gz

--- a/tests/A/A.cabal
+++ b/tests/A/A.cabal
@@ -9,6 +9,8 @@ Other-Modules: B.A
 Exposed-Modules: A
 C-Sources: hello.c, c_src/hello.c
 Extensions: ForeignFunctionInterface
+x-darcs-repo: http://darcs.haskell.org/tmp
+unknown-field: Filler.
 
 Executable: testA
 Other-Modules: A
