add new modules
20060425195548-b47d3-b6319f3c799d04a4bc248d7f9bae68e4784e3a74.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -36,9 +36,13 @@ Exposed-Modules:
         Distribution.Simple,
         Distribution.Simple.Build,
         Distribution.Simple.Configure,
+        Distribution.Simple.GHC,
         Distribution.Simple.GHCPackageConfig,
+        Distribution.Simple.Hugs,
         Distribution.Simple.Install,
+        Distribution.Simple.JHC,
         Distribution.Simple.LocalBuildInfo,
+        Distribution.Simple.NHC,
         Distribution.Simple.Register,
         Distribution.Simple.SrcDist,
         Distribution.Simple.Utils,
