--- a/package.conf.in
+++ b/package.conf.in
@@ -26,9 +26,13 @@ exposed-modules:
 	Distribution.Version,
 	Distribution.Simple.Build,
 	Distribution.Simple.Configure,
+	Distribution.Simple.GHC,
 	Distribution.Simple.GHCPackageConfig,
+	Distribution.Simple.Hugs,
 	Distribution.Simple.Install,
+	Distribution.Simple.JHC,
 	Distribution.Simple.LocalBuildInfo,
+	Distribution.Simple.NHC,
 	Distribution.Simple.Register,
 	Distribution.Simple.SrcDist,
 	Distribution.Simple.Utils,
