--- a/cabal-get/cabal-get.cabal
+++ b/cabal-get/cabal-get.cabal
@@ -7,10 +7,12 @@ Maintainer: Lemmih <lemmih@gmail.com>
 Copyright: 2005 Lemmih <lemmih@gmail.com>
 Stability: Experimental
 Category: Distribution
-Build-depends: base, Cabal, hackage-client, mtl, network, FilePath
+Build-depends: base, Cabal, mtl, network
 Synopsis: Automatic installer for Cabal packages.
 Description:
   apt-get like tool.
 
 Executable: cabal-get
 Main-is: CabalGet.hs
+Extensions: CPP, OverlappingInstances, TypeSynonymInstances, TemplateHaskell
+GHC-options: -i.. -i../dependencies/hackage-client-0.1.0 -i../dependencies/XmlRpc-2005.5.5 -i../dependencies/Crypto-2.0.0 -i../dependencies/GnuPG-0.1.1 -i../dependencies/HaXml-1.2/src -i../dependencies/HTTP-2005.5.5 -i../dependencies/NewBinary-0.1
