Patch to fix "-ixyz" being overwritten by "-i" and to remove Cabal's dependency on the Cabal package.
20060428055353-ccb46-99880874eb4e4b615b5b3edf3bc7694f22e6ae8e.gz

--- a/cabal-get/cabal-get.cabal
+++ b/cabal-get/cabal-get.cabal
@@ -7,7 +7,7 @@ Maintainer: Lemmih <lemmih@gmail.com>
 Copyright: 2005 Lemmih <lemmih@gmail.com>
 Stability: Experimental
 Category: Distribution
-Build-depends: base, Cabal, mtl, network
+Build-depends: base, mtl, network
 Synopsis: Automatic installer for Cabal packages.
 Description:
   apt-get like tool.
