--- a/cabal-install/cabal-install.cabal
+++ b/cabal-install/cabal-install.cabal
@@ -3,6 +3,7 @@ Version: 0.3.0
 License: BSD4
 License-File: ../LICENSE
 Author: Lemmih <lemmih@gmail.com>
+data-files: etc-cabal-get/serv.list
 Maintainer: Lemmih <lemmih@gmail.com>
 Copyright: 2005 Lemmih <lemmih@gmail.com>
 Stability: Experimental
