Complete move of cabal-get to cabal-install + some fixups
20060430174300-ccb46-afa182bf48406991374360175dad548d03ef09c9.gz

--- a/cabal-install/cabal-install.cabal
+++ b/cabal-install/cabal-install.cabal
@@ -3,7 +3,7 @@ Version: 0.3.0
 License: BSD4
 License-File: ../LICENSE
 Author: Lemmih <lemmih@gmail.com>
-data-files: etc-cabal-get/serv.list
+data-files: etc-cabal-install/serv.list
 Maintainer: Lemmih <lemmih@gmail.com>
 Copyright: 2005 Lemmih <lemmih@gmail.com>
 Stability: Experimental
