--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -3,7 +3,7 @@ Version: 1.1.5
 Copyright: 2003-2006, Isaac Jones
 -- Util dependency removed.  This may break ghc 6.2 builds :( Will
 -- have to figure something out for ghc 6.2
-Build-Depends: base, mtl, network, parsec
+Build-Depends: base, mtl, network
 License: BSD3
 License-File: LICENSE
 Author: Isaac Jones <ijones@syntaxpolice.org>
