GHC build only: set $(MKDEPENDHS) in addition to $(HC)
20060803092216-760e2-405b3ea8eb994298722934bb104fe8d556a765ad.gz

--- a/cabal-setup/Makefile
+++ b/cabal-setup/Makefile
@@ -8,6 +8,7 @@ ifneq "$(findstring boilerplate.mk, $(wildcard $(TOP)/mk/*))" ""
 include $(TOP)/mk/boilerplate.mk
 
 HC		= $(GHC_INPLACE)
+MKDEPENDHS      = $(GHC_INPLACE)
 HS_PROG 	= cabal-setup
 
 EXCLUDED_SRCS 	= Setup.hs
