Avoid use of deprecated Data.FiniteMap, if possible
Distribution.Compat.Map taken from Haddock.

20060809153232-760e2-506f38701a68639a5d3d95eb3d1da824ff3ab7df.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -49,6 +49,7 @@ Exposed-Modules:
         Distribution.Version,
 	Language.Haskell.Extension,
         Distribution.GetOpt,
+	Distribution.Compat.Map,
         Distribution.Compat.Directory,
         Distribution.Compat.Exception,
         Distribution.Compat.FilePath,
