Do not expose modules that are internal to the Cabal package
This brings it in sync with the package.conf.

20060821174312-9561d-5b5e7944ad86029d4d42c8db1f66b815f46578d1.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -47,7 +47,8 @@ Exposed-Modules:
         Distribution.Simple.SrcDist,
         Distribution.Simple.Utils,
         Distribution.Version,
-	Language.Haskell.Extension,
+	Language.Haskell.Extension
+Other-Modules:
         Distribution.GetOpt,
 	Distribution.Compat.Map,
         Distribution.Compat.Directory,
