Remove extensions and options that are only needed for cabal-install
Since we're not shipping cabal-install or cabal-setup just yet.

20060906085702-9561d-5760a42b4ddc673bcd2bf6c40c18f26e14ee37cc.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -55,5 +55,4 @@ Other-Modules:
         Distribution.Compat.Exception,
         Distribution.Compat.FilePath,
         Distribution.Compat.RawSystem
-Extensions: CPP, OverlappingInstances, TypeSynonymInstances, TemplateHaskell
-GHC-options: -idependencies/hackage-client-0.1.0 -idependencies/XmlRpc-2005.5.5  -idependencies/Crypto-2.0.0  -idependencies/GnuPG-0.1.1  -idependencies/HaXml-1.2/src -idependencies/HTTP-2005.5.5 -idependencies/NewBinary-0.1
+Extensions: CPP
