Make Distribution.Compat.FilePath public and Distribution.Compat.ReadP private
Ideally all the Distribution.Compat.* modules would be private,
however there is currently no sensible alternative to the FilePath module
and hiding it at this stage breaks packages.

20060911222733-9561d-d668f6ab017fa51bf0ef60e38a44d25d3137fcc0.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -20,7 +20,6 @@ Description:
         and tools.
 Category: Distribution
 Exposed-Modules:
-        Distribution.Compat.ReadP,
         Distribution.Compiler,
         Distribution.Extension,
         Distribution.InstalledPackageInfo,
@@ -47,12 +46,13 @@ Exposed-Modules:
         Distribution.Simple.SrcDist,
         Distribution.Simple.Utils,
         Distribution.Version,
-	Language.Haskell.Extension
+        Language.Haskell.Extension,
+        Distribution.Compat.FilePath
 Other-Modules:
         Distribution.GetOpt,
-	Distribution.Compat.Map,
+        Distribution.Compat.Map,
         Distribution.Compat.Directory,
         Distribution.Compat.Exception,
-        Distribution.Compat.FilePath,
-        Distribution.Compat.RawSystem
+        Distribution.Compat.RawSystem,
+        Distribution.Compat.ReadP
 Extensions: CPP
