--- a/cabal-install/cabal-install.cabal
+++ b/cabal-install/cabal-install.cabal
@@ -16,4 +16,4 @@ Description:
 Executable: cabal-install
 Main-is: CabalInstall.hs
 Extensions: CPP, OverlappingInstances, TypeSynonymInstances, TemplateHaskell
-GHC-options: -i.. -i../dependencies/hackage-client-0.1.0 -i../dependencies/XmlRpc-2005.5.5 -i../dependencies/Crypto-2.0.0 -i../dependencies/GnuPG-0.1.1 -i../dependencies/HaXml-1.2/src -i../dependencies/HTTP-2005.5.5 -i../dependencies/NewBinary-0.1
+GHC-options: -i.. -i../dependencies/HTTP-2006.7.7
