--- a/cabal-install/cabal-install.cabal
+++ b/cabal-install/cabal-install.cabal
@@ -2,18 +2,19 @@ Name: cabal-install
 Version: 0.3.0
 License: BSD4
 License-File: ../LICENSE
-Author: Lemmih <lemmih@gmail.com>
-data-files: etc-cabal-install/serv.list
-Maintainer: Lemmih <lemmih@gmail.com>
-Copyright: 2005 Lemmih <lemmih@gmail.com>
+Author: Lemmih <lemmih@gmail.com>, Paolo Martini <paolo@nemail.it>
+-- data-files: etc-cabal-install/serv.list
+Maintainer: Lemmih <lemmih@gmail.com>, Paolo Martini <paolo@nemail.it>
+Copyright: 2005 Lemmih <lemmih@gmail.com>, 2006 Paolo Martini <paolo@nemail.it>
 Stability: Experimental
 Category: Distribution
-Build-depends: base, mtl, network
+Build-depends: base, mtl, network, Cabal
 Synopsis: Automatic installer for Cabal packages.
 Description:
   apt-get like tool.
 
 Executable: cabal-install
-Main-is: CabalInstall.hs
+Main-Is: CabalInstall.hs
+Hs-Source-Dir: src/
 Extensions: CPP, OverlappingInstances, TypeSynonymInstances, TemplateHaskell
-GHC-options: -i.. -i../dependencies/HTTP-2006.7.7
+GHC-options: -idependencies/HTTP-2006.7.7
