Added cabal-install dep on regex-compat.
20070110180020-6cdb2-edc4d4870a62e13c9238b7023a56c10b371dd45d.gz

--- a/cabal-install/cabal-install.cabal
+++ b/cabal-install/cabal-install.cabal
@@ -8,7 +8,8 @@ Maintainer: Lemmih <lemmih@gmail.com>, Paolo Martini <paolo@nemail.it>
 Copyright: 2005 Lemmih <lemmih@gmail.com>, 2006 Paolo Martini <paolo@nemail.it>
 Stability: Experimental
 Category: Distribution
-Build-depends: base, mtl, network, Cabal
+-- For GHC <6.6, remove regex-compat
+Build-depends: base, mtl, network, Cabal, regex-compat
 Synopsis: Automatic installer for Cabal packages.
 Description:
   apt-get like tool.
