Moved the cabal-setup code to Distribution.SetupWrapper, so that cabal-install can use it. CabalSetup.hs now just calls the setupWrapper function.
20070111130506-6cdb2-f554a471d99ce07d015418ff1e86e652a764862e.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -33,6 +33,7 @@ Exposed-Modules:
         Distribution.PreProcess,
         Distribution.PreProcess.Unlit,
         Distribution.Setup,
+        Distribution.SetupWrapper,
         Distribution.Simple,
         Distribution.Simple.Build,
         Distribution.Simple.Configure,
