cabal-install.cabal: Added build-type field. Change hs-source-dir to hs-source-dirs (hs-source-dir has been deprecated for some time).
20070112131959-6cdb2-3c54a4c0f427ef2ce3ac21e517c33f7e09057477.gz

--- a/cabal-install/cabal-install.cabal
+++ b/cabal-install/cabal-install.cabal
@@ -8,6 +8,7 @@ Maintainer: Lemmih <lemmih@gmail.com>, Paolo Martini <paolo@nemail.it>
 Copyright: 2005 Lemmih <lemmih@gmail.com>, 2006 Paolo Martini <paolo@nemail.it>
 Stability: Experimental
 Category: Distribution
+Build-type: Simple
 -- For GHC <6.6, remove regex-compat
 Build-depends: base, mtl, network, Cabal, regex-compat
 Synopsis: Automatic installer for Cabal packages.
@@ -16,6 +17,6 @@ Description:
 
 Executable: cabal-install
 Main-Is: CabalInstall.hs
-Hs-Source-Dir: src/
+Hs-Source-Dirs: src
 Extensions: CPP, OverlappingInstances, TypeSynonymInstances, TemplateHaskell
 GHC-options: -idependencies/HTTP-2006.7.7
