--- a/cabal-upload/cabal-upload.cabal
+++ b/cabal-upload/cabal-upload.cabal
@@ -7,10 +7,10 @@ Maintainer: Bjorn Bringert
 Copyright: 2007 Bjorn Bringert <bjorn@bringert.net>
 Stability: Experimental
 Category: Distribution
-Build-depends: base, network, HTTP >= 2007.2.6
-Synopsis: Uploads packages to Hackage
+Build-depends: base, network, HTTP >= 1.0
+Synopsis: Command-line tool for uploading packages to Hackage
 Description:
-  This program uploads packages to the Hackage package database.
+  This is a command-line tool program for uploading packages to the Hackage package database.
 
 Executable: cabal-upload
 Main-Is: CabalUpload.hs
