Add recent Cabal modules to nhc98 build system.
20070212171106-6871e-4c698f4dcdf411d6b4da36aad5a2de6093f42bc7.gz

--- a/Makefile.nhc98
+++ b/Makefile.nhc98
@@ -6,32 +6,40 @@ EXTRA_H_FLAGS = -K4M
 EXTRA_HBC_FLAGS = -H80M -A4M
 
 SRCS          = \
+	Distribution/Compiler.hs \
 	Distribution/Extension.hs \
-	Distribution/GetOpt.hs \
 	Distribution/InstalledPackageInfo.hs \
 	Distribution/License.hs \
 	Distribution/Make.hs \
+	Distribution/Program.hs \
 	Distribution/Package.hs \
 	Distribution/PackageDescription.hs \
 	Distribution/ParseUtils.hs \
 	Distribution/PreProcess.hs \
+	Distribution/PreProcess/Unlit.hs \
 	Distribution/Setup.hs \
+	Distribution/SetupWrapper.hs \
 	Distribution/Simple.hs \
 	Distribution/Version.hs \
+	Language/Haskell/Extension.hs \
  \
+	Distribution/Compat/FilePath.hs \
+	Distribution/GetOpt.hs \
+	Distribution/Compat/Map.hs \
 	Distribution/Compat/Directory.hs \
 	Distribution/Compat/Exception.hs \
-	Distribution/Compat/FilePath.hs \
 	Distribution/Compat/RawSystem.hs \
 	Distribution/Compat/ReadP.hs \
  \
-	Distribution/PreProcess/Unlit.hs \
- \
 	Distribution/Simple/Build.hs \
 	Distribution/Simple/Configure.hs \
+	Distribution/Simple/GHC.hs \
 	Distribution/Simple/GHCPackageConfig.hs \
+	Distribution/Simple/Hugs.hs \
 	Distribution/Simple/Install.hs \
+	Distribution/Simple/JHC.hs \
 	Distribution/Simple/LocalBuildInfo.hs \
+	Distribution/Simple/NHC.hs \
 	Distribution/Simple/Register.hs \
 	Distribution/Simple/SrcDist.hs \
 	Distribution/Simple/Utils.hs \
