--- a/cabal-upload/cabal-upload.cabal
+++ b/cabal-upload/cabal-upload.cabal
@@ -1,5 +1,5 @@
 Name: cabal-upload
-Version: 0.1
+Version: 0.2
 License: BSD4
 License-File: ../LICENSE
 Author: Bjorn Bringert
@@ -7,7 +7,7 @@ Maintainer: Bjorn Bringert
 Copyright: 2007 Bjorn Bringert <bjorn@bringert.net>
 Stability: Experimental
 Category: Distribution
-Build-depends: base, network, HTTP >= 1.0
+Build-depends: base, network, Cabal, HTTP >= 1.0
 Synopsis: Command-line tool for uploading packages to Hackage
 Description:
   This is a command-line tool program for uploading packages to the Hackage package database.
