--- a/package.conf.in
+++ b/package.conf.in
@@ -22,6 +22,7 @@ exposed-modules:
 	Distribution.PreProcess.Unlit,
 	Distribution.Program,
 	Distribution.Setup,
+	Distribution.SetupWrapper,
 	Distribution.Simple,
 	Distribution.Version,
 	Distribution.Simple.Build,
