Compile with -Wall
20070514161917-3fd76-6b2e5cf1ab929588a6966c6ca068a26d4412f9ce.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -1,7 +1,7 @@
 Name: Cabal
 Version: 1.1.7
 --FIXME: we need a CPP-Options field
-GHC-Options: -DCABAL_VERSION=1,1,7
+GHC-Options: -DCABAL_VERSION=1,1,7 -Wall
 CC-Options: "-DCABAL_VERSION=1,1,7"
 Copyright: 2003-2006, Isaac Jones
 -- For ghc 6.2 you need to add 'unix' to Build-Depends:
