now needs -package filepath
20070522085446-6871e-058b3c69ffa2fb27588fc979eaa74d65cb555df8.gz

--- a/Makefile.nhc98
+++ b/Makefile.nhc98
@@ -1,7 +1,7 @@
 # Hey Emacs, this is a -*- makefile -*- !
 
 THISPKG       = Cabal
-SEARCH        = -package base
+SEARCH        = -package base -package filepath
 EXTRA_H_FLAGS = -K4M 
 EXTRA_HBC_FLAGS = -H80M -A4M
 
