Add Distribution.Simple.GHCMakefile to Exposed-Modules
20070526153905-3fd76-54d0c2b02c689561999b276bd9a91be0513cef1f.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -39,6 +39,7 @@ Exposed-Modules:
         Distribution.Simple.Build,
         Distribution.Simple.Configure,
         Distribution.Simple.GHC,
+        Distribution.Simple.GHCMakefile,
         Distribution.Simple.GHCPackageConfig,
         Distribution.Simple.Hugs,
         Distribution.Simple.Install,
