mark mkGHCMakefile.sh and GHCMakefile.in as source files
so that they'll be included in source distributions of this package.

20070601155538-b47d3-80eeeb7723ef0f53b3f07add179cc37d2aaca3fd.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -61,4 +61,6 @@ Other-Modules:
         Distribution.Compat.Exception,
         Distribution.Compat.RawSystem,
         Distribution.Compat.TempFile
+Extra-Source-Files:
+        mkGHCMakefile.sh Distribution/Simple/GHCMakefile.in
 Extensions: CPP
