clean up .hi-boot and .o-boot
20070620091843-760e2-f7e3ff4fc9ee5cbc8c7478dadcdc1755e6622dd8.gz

--- a/Distribution/Simple/GHCMakefile.in
+++ b/Distribution/Simple/GHCMakefile.in
@@ -123,6 +123,8 @@ show:
 clean ::
 	$(RM) $(HS_OBJS) $(STUBOBJS) $(C_OBJS) $(LIB) $(GHCI_LIB) $(HS_IFS) .depend
 	$(RM) -rf $(wildcard $(patsubst %.$(osuf), %_split, $(HS_OBJS)))
+	$(RM) $(wildcard $(patsubst %.$(osuf), %.o-boot, $(HS_OBJS)))
+	$(RM) $(wildcard $(patsubst %.$(osuf), %.hi-boot, $(HS_OBJS)))
 
 ifneq "$(strip $(WAYS))" ""
 ifeq "$(way)" ""
