include Makefile.local if it exists; allows local customization
20070620091946-760e2-88029e590bc4630ded9f316c91ca0e3d3cb47ba9.gz

--- a/Distribution/Simple/GHCMakefile.in
+++ b/Distribution/Simple/GHCMakefile.in
@@ -25,6 +25,11 @@ LIB = $(odir)/libHS$(package)$(_way).a
 
 STUBOBJS = $(wildcard $(patsubst %.$(osuf), %_stub.$(osuf), $(HS_OBJS)))
 
+# Optionally include local customizations:
+-include Makefile.local
+
+# Rules follow:
+
 all :: .depend $(LIB)
 
 .depend : $(MAKEFILE)
