Re-add configurations module to .cabal file.  (Got removed on update.)
20070623204706-75a80-def6fd21f3b264143f9788223145b36097ae160f.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -31,6 +31,7 @@ Exposed-Modules:
         Distribution.Program,
         Distribution.Package,
         Distribution.PackageDescription,
+	Distribution.Configuration,
         Distribution.ParseUtils,
         Distribution.PreProcess,
         Distribution.PreProcess.Unlit,
