get the stub object files right
20070626145413-760e2-ed3ae72b50aace51e19c1e44f386f2412eb6c483.gz

--- a/Distribution/Simple/GHCMakefile.in
+++ b/Distribution/Simple/GHCMakefile.in
@@ -30,7 +30,7 @@ RM = rm -f
 
 # Rules follow:
 
-MKSTUBOBJS = find $(odir) -name '*_stub.o' -print
+MKSTUBOBJS = find $(odir) -name "*_stub.$(osuf)" -print
 # HACK ^^^ we tried to use $(wildcard), but apparently it fails due to 
 # make using cached directory contents, or something.
 
