Move the haddock code out into it's own module
It removes about 250 loc from Distribution.Simple

20070731183410-adfee-f55d945cba66af03e007f447d08c1629f71e84df.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -61,6 +61,7 @@ Library {
         Distribution.Simple.GHC,
         Distribution.Simple.GHCMakefile,
         Distribution.Simple.GHCPackageConfig,
+        Distribution.Simple.Haddock,
         Distribution.Simple.Hugs,
         Distribution.Simple.Install,
         Distribution.Simple.JHC,
