--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -30,7 +30,7 @@ Flag small_base {
 Library {
   if flag(small_base) {
     -- For ghc 6.2 you need to add 'unix' to Build-Depends:
-    Build-Depends: base, filepath, pretty, directory, old-time, process
+    Build-Depends: base, filepath, pretty, directory, old-time, process, containers
   } else {
     Build-Depends: base, filepath
   }
