Move the SetupWrapper module under Distribution.Simple
It's really a wrapper around the simple build system.

20070803012304-adfee-50ac52957aa6422dafe19b425f44d5626c71af71.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -54,7 +54,6 @@ Library {
         Distribution.PreProcess,
         Distribution.PreProcess.Unlit,
         Distribution.Setup,
-        Distribution.SetupWrapper,
         Distribution.Simple,
         Distribution.Simple.Build,
         Distribution.Simple.Configure,
@@ -68,6 +67,7 @@ Library {
         Distribution.Simple.LocalBuildInfo,
         Distribution.Simple.NHC,
         Distribution.Simple.Register,
+	Distribution.Simple.SetupWrapper,
         Distribution.Simple.SrcDist,
         Distribution.Simple.Utils,
         Distribution.Verbosity,
