Pattern match on an OS datatype rather than using ifdef everywhere
20070805130347-3fd76-ee139cb092f43cd1a2ab893b40f084448b8e8aa1.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -70,6 +70,7 @@ Library {
         Distribution.Simple.SetupWrapper,
         Distribution.Simple.SrcDist,
         Distribution.Simple.Utils,
+        Distribution.System,
         Distribution.Verbosity,
         Distribution.Version,
         Distribution.Compat.ReadP,
