Refactor the code for managing installation directories
New types for the collection of installation directory templates and a
separate type for the collection of actual real install FilePaths.
The templates are represented with a PathTemplate adt.
Dir templates can now be relative to each other, eg $htmldir to $docdir
Default install dir templates are now specified compactly in one place.
Adding new dirs should be considerably simpler than previously.
This patch should not actualy change where anything is installed.

20070814092320-adfee-20f3c60c88db7193993c378c6f743bdf9b40250e.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -63,6 +63,7 @@ Library {
         Distribution.Simple.Haddock,
         Distribution.Simple.Hugs,
         Distribution.Simple.Install,
+        Distribution.Simple.InstallDirs,
         Distribution.Simple.JHC,
         Distribution.Simple.LocalBuildInfo,
         Distribution.Simple.NHC,
