Move several modules under .Simple
Compiler, Program, PreProcess and Setup are really part of the Simple
build system.
Also move a couple GHC modules under Simple.GHC.*

20070826201510-adfee-a8f5d397f252369daae9e25b5992efede6e547ee.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -46,20 +46,17 @@ Library {
         Distribution.InstalledPackageInfo,
         Distribution.License,
         Distribution.Make,
-        Distribution.Program,
         Distribution.Package,
         Distribution.PackageDescription,
         Distribution.Configuration,
         Distribution.ParseUtils,
-        Distribution.PreProcess,
-        Distribution.PreProcess.Unlit,
-        Distribution.Setup,
         Distribution.Simple,
         Distribution.Simple.Build,
+        Distribution.Simple.Compiler,
         Distribution.Simple.Configure,
         Distribution.Simple.GHC,
-        Distribution.Simple.GHCMakefile,
-        Distribution.Simple.GHCPackageConfig,
+        Distribution.Simple.GHC.Makefile,
+        Distribution.Simple.GHC.PackageConfig,
         Distribution.Simple.Haddock,
         Distribution.Simple.Hugs,
         Distribution.Simple.Install,
@@ -67,7 +64,11 @@ Library {
         Distribution.Simple.JHC,
         Distribution.Simple.LocalBuildInfo,
         Distribution.Simple.NHC,
+        Distribution.Simple.PreProcess,
+        Distribution.Simple.PreProcess.Unlit,
+        Distribution.Simple.Program,
         Distribution.Simple.Register,
+        Distribution.Simple.Setup,
         Distribution.Simple.SetupWrapper,
         Distribution.Simple.SrcDist,
         Distribution.Simple.Utils,
