Maintainer is now cabal-devel@haskell.org
20070901140921-b47d3-1d7c389243d2a4720d88b048fcdb2fa84eb26f69.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -5,7 +5,7 @@ Copyright: 2003-2006, Isaac Jones
 License: BSD3
 License-File: LICENSE
 Author: Isaac Jones <ijones@syntaxpolice.org>
-Maintainer: Isaac Jones <ijones@syntaxpolice.org>
+Maintainer: cabal-devel@haskell.org
 Homepage: http://www.haskell.org/cabal/
 Synopsis: A framework for packaging Haskell software
 Description:
