Use confgurations to help build Cabal for ghc-6.2.x
Replacing a long-standing comment telling people how to do it manually.

20070912112934-adfee-97245949729391ed4afc1160a09f3936a1675281.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -26,10 +26,12 @@ Flag small_base
 
 Library
   if flag(small_base)
-    -- For ghc 6.2 you need to add 'unix' to Build-Depends:
     Build-Depends: base, filepath, pretty, directory, old-time, process, containers
   else
     Build-Depends: base, filepath
+
+  if impl(ghc < 6.3)
+    Build-Depends: unix
 
   --FIXME: we need a CPP-Options field
   GHC-Options: -DCABAL_VERSION=1,2,0 -Wall
