Note in .cabal file that we're using a custom build-type
20070917033959-adfee-9f4b62062d5e880f9e7668d7a5e4c7cb8233e571.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -17,6 +17,9 @@ Description:
         for distributing, organizing, and cataloging Haskell libraries
         and tools.
 Category: Distribution
+Build-Type: Custom
+-- Even though we do use the default Setup.lhs it's vital to bootstraping
+-- that we build Setup.lhs using our own local Cabal source code.
 
 Extra-Source-Files:
         mkGHCMakefile.sh Distribution/Simple/GHC/Makefile.in
