Add a Distribution.Setup module that re-exports Distribution.Simple.Setup
Many Setup.hs files import Distribution.Setup so this unbreaks them.
It's marked DEPRECATED so will generate a warning for scripts that use it.
This patch is only going to the cabal-1.2 branch, not HEAD.

20070920121125-adfee-e80187814cf862a9ae890ad2fedd7102d4a56557.gz

--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -43,6 +43,7 @@ Library
   Exposed-Modules:
         Distribution.Compiler,
         Distribution.Extension,
+        Distribution.Setup,
         Distribution.InstalledPackageInfo,
         Distribution.License,
         Distribution.Make,
