--- a/Cabal.cabal
+++ b/Cabal.cabal
@@ -1,6 +1,5 @@
 Name: Cabal
 Version: 1.3
---FIXME: we need a CPP-Options field
 Copyright: 2003-2006, Isaac Jones
 License: BSD3
 License-File: LICENSE
@@ -36,9 +35,8 @@ Library
   if impl(ghc < 6.3)
     Build-Depends: unix
 
-  --FIXME: we need a CPP-Options field
-  GHC-Options: -DCABAL_VERSION=1,2,0 -Wall
-  CC-Options: "-DCABAL_VERSION=1,2,0"
+  GHC-Options: -Wall
+  CPP-Options: "-DCABAL_VERSION=1,3"
   nhc98-Options: -K4M
 
   Exposed-Modules:
